--- a/utwo/index.html
+++ b/utwo/index.html
@@ -84,22 +84,22 @@
         </section>
 
         <section class="row g-4 align-items-center">
-            <div class="col-md-6">
+            <div class="col-md-6 order-1 order-md-1">
                 <h3>Disparities in Cancer Programs</h3>
                 <p class="text-custom">This program trains CSULA public health students to enhance cancer awareness and
                     trial access in
                     underserved areas where we are committed to healthcare equity and cancer outreach.</p>
             </div>
-            <div class="col-md-6">
+            <div class="col-md-6 order-2 order-md-2">
                 <img src="img/Cancer.jpg" alt="Impact Image" class="img-fluid">
             </div>
         </section>
         <br>
         <section class="row g-4 align-items-center">
-            <div class="col-md-6">
+            <div class="col-md-6 order-2 order-md-1">
                 <img src="img/Literacy.jpg" alt="Impact Image" class="img-fluid">
             </div>
-            <div class="col-md-6">
+            <div class="col-md-6 order-1 order-md-2">
                 <h3>Immigrant, Health Literacy & Access Project</h3>
                 <p class="text-custom">Partnering with Oakland University, MiOra's project focuses on improving
                     healthcare understanding and
@@ -109,7 +109,7 @@
         </section>
 
         <section class="row g-4 align-items-center">
-            <div class="col-md-6">
+            <div class="col-md-6 order-1 order-md-1">
                 <h3>Assessing US Mens Health Resource Utilization & the Associated Barriers Project
                 </h3>
                 <p class="text-custom">MiOra engages Health Ambassadors to understand men's healthcare knowledge and
@@ -117,16 +117,16 @@
                     Through data collection and publication, we aim to improve healthcare accessibility for men
                     nationwide.</p>
             </div>
-            <div class="col-md-6">
+            <div class="col-md-6 order-2 order-md-2">
                 <img src="img/Cancer.jpg" alt="Impact Image" class="img-fluid">
             </div>
         </section>
         <br>
         <section class="row g-4 align-items-center">
-            <div class="col-md-6">
+            <div class="col-md-6 order-2 order-md-1">
                 <img src="img/AI.png" alt="Impact Image" class="img-fluid">
             </div>
-            <div class="col-md-6">
+            <div class="col-md-6 order-1 order-md-2">
                 <h3>AI Project</h3>
                 <p class="text-custom">Exploring AI's impact on healthcare, MiOra aims to enhance patient care and
                     resource allocation. By
@@ -135,22 +135,22 @@
         </section>
 
         <section class="row g-4 align-items-center">
-            <div class="col-md-6">
+            <div class="col-md-6 order-1 order-md-1">
                 <h3>Mental Health Project</h3>
                 <p class="text-custom">Focusing on peer-to-peer programs for stress management among students, MiOra
                     enhances mental health
                     support in educational settings.</p>
             </div>
-            <div class="col-md-6">
+            <div class="col-md-6 order-2 order-md-2">
                 <img src="img/Mental Health.jpeg" alt="Impact Image" class="img-fluid">
             </div>
         </section>
         <br>
         <section class="row g-4 align-items-center">
-            <div class="col-md-6">
+            <div class="col-md-6 order-2 order-md-1">
                 <img src="img/Healthy Long Life.jpg" alt="Impact Image" class="img-fluid">
             </div>
-            <div class="col-md-6">
+            <div class="col-md-6 order-1 order-md-2">
                 <h3>Healthy Long-Life Project: Preventative Care</h3>
                 <p class="text-custom">Promoting preventive care through education on vaccines, screening tests, and
                     healthy lifestyles,
@@ -159,13 +159,13 @@
         </section>
 
         <section class="row g-4 align-items-center">
-            <div class="col-md-6">
+            <div class="col-md-6 order-1 order-md-1">
                 <h3>Policy Project</h3>
                 <p class="text-custom">MiOra trains Health Ambassadors in healthcare policy and advocacy through expert
                     partnerships and
                     learning sessions. Join us in the discussion on critical health issues.</p>
             </div>
-            <div class="col-md-6">
+            <div class="col-md-6 order-2 order-md-2">
                 <img src="img/Policy.png" alt="Impact Image" class="img-fluid">
             </div>
         </section>
